[PATCH] Stop speaking when app closes

--- a/Echo/Localizable.xcstrings
+++ b/Echo/Localizable.xcstrings
@@ -83,7 +83,7 @@
       "comment" : "An accessibility label for the up arrow image"
     },
     "Audio" : {
-      "comment" : "The label for the section about analytics\nLabel for the navigation link to the audio options page"
+      "comment" : "Label for the navigation link to the audio options page\nThe label for the section about analytics"
     },
     "Audio Settings" : {
       "comment" : "The navigation title for the Audio options page"
@@ -299,7 +299,7 @@
       "comment" : "The label for the portuguese language when setting prediction language, make sure to include the experimental tag"
     },
     "Predict which words and letters come next and you enter each letter." : {
-      "comment" : "Explaination of prediction during onboarding\nSelect the vocabulary of phrases, words and letters to be used"
+      "comment" : "Select the vocabulary of phrases, words and letters to be used\nExplaination of prediction during onboarding"
     },
     "Prediction" : {
       "comment" : "Label for toggle to turn prediction off and on\nLabel for the section in settings about prediction"
@@ -326,7 +326,7 @@
 
     },
     "Save" : {
-      "comment" : "The label for the save changes button\nThe save toolbar button when saving controller mapping"
+      "comment" : "The save toolbar button when saving controller mapping\nThe label for the save changes button"
     },
     "Scan **%lld** times before stopping" : {
       "comment" : "A label that outlines the number of scanning loops the app will go on. Please leave the value in bold."
@@ -338,10 +338,10 @@
       "comment" : "Label for toggle that controls when scanning starts"
     },
     "Scanning" : {
-      "comment" : "Label for toggle to turn scanning off and on\nLabel for the navigation link to the scanning options page\nLabel for the scanning during onboarding"
+      "comment" : "Label for the navigation link to the scanning options page\nLabel for the scanning during onboarding\nLabel for toggle to turn scanning off and on"
     },
     "Scanning is when Echo automatically cycles through the items in the list one ofter the other reading them aloud one a time." : {
-      "comment" : "The footer explaining what scanning loops is\nExplaination of scanning during onboarding"
+      "comment" : "Explaination of scanning during onboarding\nThe footer explaining what scanning loops is"
     },
     "Scanning Options" : {
       "comment" : "The navigation title for the scanning options page"
@@ -470,7 +470,7 @@
       "comment" : "Label for toggle prompts"
     },
     "Vocabulary" : {
-      "comment" : "The navigation title for the Vocabulary options page\nThe label that is shown next to the vocab picker\nLabel for navigation link to the vocab page"
+      "comment" : "The navigation title for the Vocabulary options page\nLabel for navigation link to the vocab page\nThe label that is shown next to the vocab picker"
     },
     "Voice" : {
       "comment" : "Label for NavigationLink that takes you to a voice picker page"
